api for logout, menu controller db
- Added logout api - not used
- Added menu controller and db migration for menu
