# routes/api.php
@@ -9,11 +9,17 @@ Route::get('/user', function (Request $request) {
     return $request->user();
 })->middleware('auth:sanctum');
 
+//HOW TO MAKE NEWLY CREATED API AVAILABLE IN SWAGGER:-
+//CLI Command: php artisan l5-swagger:generate
+
 //for testing purpose
 Route::middleware('auth:sanctum')->get('/weather/{city}', [WeatherController::class, 'getWeatherByCity']);
 
 //get user role
 Route::middleware('auth:sanctum')->get('/me', [UserController::class, 'me']);
+
+//logout
+Route::middleware('auth:sanctum')->post('/logout', [UserController::class, 'logout']);
 
 //login
 Route::post('/login', [UserController::class, 'login']);
